Added search bars and titles

--- a/google.html
+++ b/google.html
@@ -15,7 +15,8 @@
 	    s.parentNode.insertBefore(gcse, s);
 	  })();
 	</script>
-	<gcse:searchresults-only></gcse:searchresults-only>
+	<h3 style="color:lightblue" align="center">Google</h3>
+	<gcse:search></gcse:search>
     <div2></div2>
   </body>
 </html>
