--- a/youtube.html
+++ b/youtube.html
@@ -16,6 +16,7 @@
 	    s.parentNode.insertBefore(gcse, s);
 	  })();
 	</script>
-	<gcse:searchresults-only></gcse:searchresults-only>
+	<h3 style="color:lightblue" align="center">Youtube</h3>
+	<gcse:search></gcse:search>
   </body>
 </html>
