Testing results only search

--- a/google.html
+++ b/google.html
@@ -16,7 +16,7 @@
 	  })();
 	</script>
 	<h3 style="color:lightblue" align="center">Google</h3>
-	<gcse:search></gcse:search>
+	<gcse:search enableAutoComplete="true"></gcse:search>
     <div2></div2>
   </body>
 </html>
