--- a/youtube.html
+++ b/youtube.html
@@ -17,6 +17,6 @@
 	  })();
 	</script>
 	<h3 style="color:lightblue" align="center">Youtube</h3>
-	<gcse:search></gcse:search>
+	<gcse:searchresults-only></gcse:searchresults-only>
   </body>
 </html>
