Testing results only search

--- a/index.html
+++ b/index.html
@@ -28,23 +28,10 @@
             </div>
         </nav>
         <div>
-            <script>
-              (function() {
-                var cx = '003287012021853683961:iuzfdrnj_pg';
-                var gcse = document.createElement('script');
-                gcse.type = 'text/javascript';
-                gcse.async = true;
-                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(gcse, s);
-              })();
-            </script>
-            <h3 style="color:lightblue" align="center">Youtube</h3>
-            <gcse:searchresults-only></gcse:searchresults-only>
-            <!-- <iframe src="google.html" height="850" width="448.5"></iframe>
-            <iframe src="wikipedia.html" height="850" width="448.5"></iframe>
+<!--             <iframe src="google.html" height="850" width="448.5"></iframe>
+            <iframe src="wikipedia.html" height="850" width="448.5"></iframe> -->
             <iframe src="youtube.html" height="850" width="448.5"></iframe>
-            <iframe src="khan_academy.html" height="850" width="448.5"></iframe> -->
+            <iframe src="khan_academy.html" height="850" width="448.5"></iframe>
         </div>
         <footer class="page-footer blue lighten-2">
           <div class="footer-copyright">
