--- a/khan_academy.html
+++ b/khan_academy.html
@@ -16,7 +16,7 @@
 	  })();
 	</script>
 	<h3 style="color:lightblue" align="center">Khan Academy</h3>
-	<gcse:search enableAutoComplete="true"></gcse:search>
+	<gcse:searchresults-only></gcse:searchresults-only>
     <div2></div2>
   </body>
 </html>
