Testing results only search

--- a/index.html
+++ b/index.html
@@ -29,9 +29,37 @@
         </nav>
         <div>
 <!--             <iframe src="google.html" height="850" width="448.5"></iframe>
-            <iframe src="wikipedia.html" height="850" width="448.5"></iframe> -->
+            <iframe src="wikipedia.html" height="850" width="448.5"></iframe>
             <iframe src="youtube.html" height="850" width="448.5"></iframe>
-            <iframe src="khan_academy.html" height="850" width="448.5"></iframe>
+            <iframe src="khan_academy.html" height="850" width="448.5"></iframe> -->
+                <script>
+                  (function() {
+                    var cx = '003287012021853683961:iuzfdrnj_pg';
+                    var gcse = document.createElement('script');
+                    gcse.type = 'text/javascript';
+                    gcse.async = true;
+                    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(gcse, s);
+                  })();
+                </script>
+                <h3 style="color:lightblue" align="center">Youtube</h3>
+                <gcse:searchresults-only></gcse:searchresults-only>
+                <div1></div1>
+                <script>
+                  (function() {
+                    var cx = '003287012021853683961:lejy8ejlbz0';
+                    var gcse = document.createElement('script');
+                    gcse.type = 'text/javascript';
+                    gcse.async = true;
+                    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(gcse, s);
+                  })();
+                </script>
+                <h3 style="color:lightblue" align="center">Khan Academy</h3>
+                <gcse:searchresults-only></gcse:searchresults-only>
+                <div2></div2>
         </div>
         <footer class="page-footer blue lighten-2">
           <div class="footer-copyright">
