Testing results only search

--- a/youtube.html
+++ b/youtube.html
@@ -17,6 +17,7 @@
 	  })();
 	</script>
 	<h3 style="color:lightblue" align="center">Youtube</h3>
-	<gcse:searchresults-only></gcse:searchresults-only>
+	<gcse:search enableAutoComplete="true"></gcse:search>
+	<div2></div2>
   </body>
 </html>
