Testing results only search

--- a/test.html
+++ b/test.html
@@ -14,14 +14,20 @@
       <nav class="nav-extended">
         <div class="nav-wrapper blue lighten-2">
           <img src="icon64.png">
-          <a href="index.html/?q=golf" class="brand-logo">SearchSavior</a>
+          <a href="test.html" class="brand-logo">SearchSavior</a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+<!--           <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">JavaScript</a></li>
+          </ul> -->
         </div>
         <div class="nav-content">
           <ul class="tabs tabs-transparent blue lighten-2">
-            <li class="tab"><a class="active" href="google.html">Google</a></li>
-            <li class="tab"><a href="youtube.html">Youtube</a></li>
-            <li class="tab"><a href="khan_academy.html">Khan Academy</a></li>
-            <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
+            <li class="tab"><a class="active" href="#test1">Google</a></li>
+            <li class="tab"><a href="#test2">Youtube</a></li>
+            <li class="tab"><a href="#test3">Khan Academy</a></li>
+            <li class="tab"><a href="#test4">Wikipedia</a></li>
           </ul>
         </div>
       </nav>
