--- a/index.html
+++ b/index.html
@@ -11,49 +11,52 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
-        <nav>
-            <div class="nav-wrapper blue lighten-2" style="padding-left:10px;">
-              <img src="icon64.png"><a href="index.html" class="brand-logo" style="padding-left: 10px">SearchSavior</a>
-            </div>
-        </nav>
-        <nav>
-            <div class="nav-wrapper blue lighten-1">
-              <form>
-                <div class="input-field">
-                  <input id="search" type="search" required>
-                  <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                  <i class="material-icons">close</i>
-                </div>
-              </form>
-            </div>
-        </nav>
-        <div>
-            <!-- <iframe src="google.html" height="850" width="448.5"></iframe>
-            <iframe src="wikipedia.html" height="850" width="448.5"></iframe>
-            <iframe src="youtube.html" height="850" width="448.5"></iframe>
-            <iframe src="khan_academy.html" height="850" width="448.5"></iframe> -->
-            <div1></div1>
-                <script>
-                  (function() {
-                    var cx = '003287012021853683961:iuzfdrnj_pg';
-                    var gcse = document.createElement('script');
-                    gcse.type = 'text/javascript';
-                    gcse.async = true;
-                    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-                    var s = document.getElementsByTagName('script')[0];
-                    s.parentNode.insertBefore(gcse, s);
-                  })();
-                </script>
-                <h3 style="color:lightblue" align="center">Youtube</h3>
-                <gcse:search enableAutoComplete="true"></gcse:search>
-            <div2></div2>
+      <nav class="nav-extended">
+        <div class="nav-wrapper blue lighten-2">
+          <img src="icon64.png">
+          <a href="index.html/?q=golf" class="brand-logo">SearchSavior</a>
         </div>
-        <footer class="page-footer blue lighten-2">
-          <div class="footer-copyright">
-            <div class="container">
-            © 2019 Copyright Akshay R. Kapadia, Zachary Kessler, Jaad Barguti
-            <div>Logo made by <a href="https://www.freepik.com/" title="Freepik" style="color:white;">Freepik</a> from <a href="https://www.flaticon.com/"              title="Flaticon" style="color:white;">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" style="color:white;" target="_blank">CC 3.0 BY</a>
+        <div class="nav-content">
+          <ul class="tabs tabs-transparent blue lighten-2">
+            <li class="tab"><a class="active" href="google.html">Google</a></li>
+            <li class="tab"><a href="youtube.html">Youtube</a></li>
+            <li class="tab"><a href="khan_academy.html">Khan Academy</a></li>
+            <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
+          </ul>
+        </div>
+      </nav>
+      <nav>
+          <div class="nav-wrapper blue lighten-1">
+            <form>
+              <div class="input-field">
+                <input id="search" type="search" required>
+                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                <i class="material-icons">close</i>
+              </div>
+            </form>
           </div>
-        </footer>
+      </nav>
+      <div1></div1>
+        <script>
+          (function() {
+            var cx = '003287012021853683961:clboqhv4rzw';
+            var gcse = document.createElement('script');
+            gcse.type = 'text/javascript';
+            gcse.async = true;
+            gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(gcse, s);
+          })();
+        </script>
+        <h3 style="color:lightblue" align="center">Google</h3>
+        <gcse:search enableAutoComplete="true"></gcse:search>
+      <div2></div2>
+      <footer class="page-footer blue lighten-2">
+        <div class="footer-copyright">
+          <div class="container">
+          © 2019 Copyright Akshay R. Kapadia, Zachary Kessler, Jaad Barguti
+          <div>Logo made by <a href="https://www.freepik.com/" title="Freepik" style="color:white;">Freepik</a> from <a href="https://www.flaticon.com/"              title="Flaticon" style="color:white;">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" style="color:white;" target="_blank">CC 3.0 BY</a>
+        </div>
+      </footer>
     </body>
 </html>
