Testing results only search

--- a/google.html
+++ b/google.html
@@ -49,7 +49,7 @@
           })();
         </script>
         <h3 style="color:lightblue" align="center">Google</h3>
-        <gcse:search enableAutoComplete="true"></gcse:search>
+        <gcse:searchresults-only></gcse:searchresults-only>
       <div2></div2>
       <footer class="page-footer blue lighten-2">
         <div class="footer-copyright">
