Testing results only search

--- a/index.html
+++ b/index.html
@@ -36,20 +36,10 @@
             </form>
           </div>
       </nav>
+      <div style="height:490px"></div>
       <div1></div1>
-        <script>
-          (function() {
-            var cx = '003287012021853683961:clboqhv4rzw';
-            var gcse = document.createElement('script');
-            gcse.type = 'text/javascript';
-            gcse.async = true;
-            gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(gcse, s);
-          })();
-        </script>
-        <h3 style="color:lightblue" align="center">Google</h3>
-        <gcse:searchresults-only></gcse:searchresults-only>
+        <h1 style="color:lightgrey">Fast. Convenient. Integrated.</h1>
+        <h3 style="color:lightgrey">A Seemlessly integrated search tool for all your needs</h3>
       <div2></div2>
       <footer class="page-footer blue lighten-2">
         <div class="footer-copyright">
