--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="nav-extended">
         <div class="nav-wrapper blue lighten-2">
           <img src="icon64.png">
-          <a href="index.html/?q=golf" class="brand-logo">SearchSavior</a>
+          <a href="index.html/" class="brand-logo">SearchSavior</a>
         </div>
         <div class="nav-content">
           <ul class="tabs tabs-transparent blue lighten-2">
