--- a/khan_academy.html
+++ b/khan_academy.html
@@ -25,17 +25,12 @@
           </ul>
         </div>
       </nav>
-      <nav>
-          <div class="nav-wrapper blue lighten-1">
-            <form>
-              <div class="input-field">
-                <input id="search" type="search" required>
-                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons">close</i>
-              </div>
-            </form>
-          </div>
-      </nav>
+      <div>
+            <input id="searchbar" placeholder="Search for anything you want">
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url = 'khan_academy.html?q=' + q; window.location.replace(url);">Search
+            <i class="material-icons right">send</i>
+            </button>
+      </div>
       <div1></div1>
 		<script>
 			  (function() {
