--- a/index.html
+++ b/index.html
@@ -22,26 +22,17 @@
             <li class="tab"><a href="youtube.html">Youtube</a></li>
             <li class="tab"><a href="khan_academy.html">Khan Academy</a></li>
             <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
+            <li class="tab"><a href="quora.html">Quora</a></li>
+            <li class="tab"><a href="yahoo_answers.html">Yahoo Answers</a></li>
           </ul>
         </div>
       </nav>
       <div>
             <input id="searchbar" placeholder="Search for anything you want">
-            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url = 'google.html?q=' + q; window.location.replace(url);">Search
+            <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url = 'google.html?q=' + q; window.location.replace(url);">Search
             <i class="material-icons right">send</i>
             </button>
       </div>
-<!--       <nav>
-          <div class="nav-wrapper blue lighten-1">
-            <form>
-              <div class="input-field">
-                <input id="searchbar" type="search" required>
-                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons">close</i>
-              </div>
-            </form>
-          </div>
-      </nav> -->
       <div style="height:48.2%;"></div>
       <div1></div1>
         <h1 style="color:lightgrey">Fast. Convenient. Integrated.</h1>
