--- a/youtube.html
+++ b/youtube.html
@@ -18,20 +18,26 @@
         </div>
         <div class="nav-content">
           <ul class="tabs tabs-transparent blue lighten-2">
-            <li class="tab"><a href="google.html">Google</a></li>
-            <li class="tab"><a class="active" href="youtube.html">Youtube</a></li>
-            <li class="tab"><a href="khan_academy.html">Khan Academy</a></li>
-            <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='google.html?q=' + q; window.location.replace(url);">Google</a></li>
+            <li class="tab disabled"><a class="active">Youtube</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Khan Academy</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='wikipedia.html?q=' + q; window.location.replace(url);">Wikipedia</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='quora.html?q=' + q; window.location.replace(url);">Quora</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Yahoo Answers</a></li>
           </ul>
         </div>
       </nav>
       <div>
         <input id="searchbar" placeholder="Search for anything you want">
-        <button class="btn waves-effect waves-light" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url = 'youtube.html?q=' + q; window.location.replace(url);">Search
+        <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='youtube.html?q=' + q; window.location.replace(url);">Search
         <i class="material-icons right">send</i>
         </button>
       </div>
       <div1></div1>
+      <script type="text/javascript">
+        var urlParams = new URLSearchParams(window.location.search);
+        document.getElementById("searchbar").value = urlParams.get("q");
+     	</script>
 		<script>
 		  (function() {
 		    var cx = '003287012021853683961:iuzfdrnj_pg';
