Fixed typo in subtitle

--- a/google.html
+++ b/google.html
@@ -35,9 +35,9 @@
       </div>
       <div1></div1>
       <script type="text/javascript">
-        var urlParams = new URLSearchParams(window.location.search);
-        document.getElementById("searchbar").value = urlParams.get("q");
-	   </script>
+        var param = new URLSearchParams(window.location.search);
+        document.getElementById("searchbar").value = param.get("q");
+      </script>
 		<script>
 		  (function() {
 		    var cx = '003287012021853683961:clboqhv4rzw';
