--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div style="height:48.2%;"></div>
       <div1></div1>
         <h1 style="color:lightgrey">Fast. Convenient. Integrated.</h1>
-        <h3 style="color:lightgrey">A Seemlessly integrated search tool for all your needs</h3>
+        <h3 style="color:lightgrey">A Seemlessly Integrated Search Tool For All Your Needs</h3>
       <div2></div2>
       <footer class="page-footer blue lighten-2">
         <div class="footer-copyright">
