--- a/yahoo_answers.html
+++ b/yahoo_answers.html
@@ -34,10 +34,10 @@
         </button>
       </div>
       <div1></div1>
-        <script type="text/javascript">
-			var urlParams = new URLSearchParams(window.location.search);
-			document.getElementById("searchbar").value = urlParams.get("q");
-     	</script>
+      <script type="text/javascript">
+        var param = new URLSearchParams(window.location.search);
+        document.getElementById("searchbar").value = param.get("q");
+      </script>
       <script>
         (function() {
           var cx = '003287012021853683961:zplec0suh2u';
