--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
             <i class="material-icons right">send</i>
             </button>
       </div>
-      <div style="height:48.2%;"></div>
+      <div style="height:59.85%;"></div>
       <div1></div1>
-        <h1 style="color:lightgrey">Fast. Convenient. Integrated.</h1>
-        <h3 style="color:lightgrey">A Seemlessly Integrated Search Tool For All Your Needs</h3>
+        <h3 style="color:lightgrey">Fast, Convenient Browser Extension Making Your Academic Searches Easier</h3>
       <div2></div2>
       <footer class="page-footer blue lighten-2">
         <div class="footer-copyright">
