--- a/google.html
+++ b/google.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="nav-extended">
         <div class="nav-wrapper blue lighten-2">
-          <img src="icon64.png">
+          <img src="icon64.png" onclick="document.location.replace('index.html');">
           <a href="index.html" class="brand-logo">SearchSavior</a>
         </div>
         <div class="nav-content">
