--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="nav-extended">
         <div class="nav-wrapper blue lighten-2">
-          <img src="icon64.png">
+          <img src="icon64.png" onclick="document.location.replace('index.html');">
           <a href="index.html" class="brand-logo">SearchSavior</a>
         </div>
         <div class="nav-content">
@@ -29,13 +29,21 @@
       </nav>
       <div>
             <input id="searchbar" placeholder="Search for anything you want">
+            <script type="text/javascript">
+              var param = new URLSearchParams(window.location.search);
+              var q = param.get("q");
+              document.getElementById("searchbar").value = q;
+              if(q != null) {
+                document.location.replace('google.html?q=' + q);
+              }
+            </script>
             <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url = 'google.html?q=' + q; window.location.replace(url);">Search
             <i class="material-icons right">send</i>
             </button>
       </div>
       <div style="height:59.85%;"></div>
       <div1></div1>
-        <h3 style="color:lightgrey">Fast, Convenient Browser Extension Making Your Academic Searches Easier</h3>
+        <h3 style="color:lightgrey">Fast, Convenient Browser Extension Making Your Academic Searches Deeper</h3>
       <div2></div2>
       <footer class="page-footer blue lighten-2">
         <div class="footer-copyright">
