--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <ul class="tabs tabs-transparent blue lighten-2">
             <li class="tab"><a href="google.html">Google</a></li>
             <li class="tab"><a href="youtube.html">Youtube</a></li>
-            <li class="tab"><a href="khan_academy.html">Khan Academy</a></li>
-            <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
+<!--             <li class="tab"><a href="khan_academy.html">Khan Academy</a></li>
+ -->            <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
             <li class="tab"><a href="quora.html">Quora</a></li>
             <li class="tab"><a href="yahoo_answers.html">Yahoo Answers</a></li>
           </ul>
