--- a/wikipedia.html
+++ b/wikipedia.html
@@ -20,7 +20,7 @@
           <ul class="tabs tabs-transparent blue lighten-2">
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='google.html?q=' + q; window.location.replace(url);">Google</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='youtube.html?q=' + q; window.location.replace(url);">Youtube</a></li>
-            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Khan Academy</a></li>
+<!--             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Khan Academy</a></li> -->
             <li class="tab disabled"><a class="active">Wikipedia</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='quora.html?q=' + q; window.location.replace(url);">Quora</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Yahoo Answers</a></li>
