--- a/google_scholar.html
+++ b/google_scholar.html
@@ -21,36 +21,36 @@
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='google.html?q=' + q; window.location.replace(url);">Google</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='youtube.html?q=' + q; window.location.replace(url);">Youtube</a></li>
 <!--             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Khan Academy</a></li> -->
-            <li class="tab disabled"><a class="active">Wikipedia</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='wikipedia.html?q=' + q; window.location.replace(url);">Wikipedia</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='quora.html?q=' + q; window.location.replace(url);">Quora</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Yahoo Answers</a></li>
-            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='google_scholar.html?q=' + q; window.location.replace(url);">Google Scholar</a></li>
+            <li class="tab disabled"><a class="active">Google Scholar</a></li>
           </ul>
         </div>
       </nav>
       <div>
-            <input id="searchbar" placeholder="Search for anything you want">
-            <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='wikipedia.html?q=' + q; window.location.replace(url);">Search
-            <i class="material-icons right">send</i>
-            </button>
+  	    <input id="searchbar" placeholder="Search for anything you want">
+        <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Search
+        <i class="material-icons right">send</i>
+        </button>
       </div>
       <div1></div1>
       <script type="text/javascript">
         var param = new URLSearchParams(window.location.search);
         document.getElementById("searchbar").value = param.get("q");
       </script>
-        <script>
-	 	  (function() {
-		    var cx = '003287012021853683961:6s31w8ejbfk';
-		    var gcse = document.createElement('script');
-		    gcse.type = 'text/javascript';
-		    gcse.async = true;
-		    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-		    var s = document.getElementsByTagName('script')[0];
-		    s.parentNode.insertBefore(gcse, s);
-		  })();
-        </script>
-        <gcse:searchresults-only></gcse:searchresults-only>
+			<script>
+			  (function() {
+			    var cx = '003287012021853683961:qqp5voky-oq';
+			    var gcse = document.createElement('script');
+			    gcse.type = 'text/javascript';
+			    gcse.async = true;
+			    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+			    var s = document.getElementsByTagName('script')[0];
+			    s.parentNode.insertBefore(gcse, s);
+			  })();
+			</script>
+			<gcse:searchresults-only></gcse:searchresults-only>
       <div2></div2>
       <footer class="page-footer blue lighten-2">
         <div class="footer-copyright">
