--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
  -->            <li class="tab"><a href="wikipedia.html">Wikipedia</a></li>
             <li class="tab"><a href="quora.html">Quora</a></li>
             <li class="tab"><a href="yahoo_answers.html">Yahoo Answers</a></li>
+            <li class="tab"><a href="google_scholar.html">Google Scholar</a></li>
           </ul>
         </div>
       </nav>
