--- a/quora.html
+++ b/quora.html
@@ -24,6 +24,7 @@
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='wikipedia.html?q=' + q; window.location.replace(url);">Wikipedia</a></li>
             <li class="tab disabled"><a class="active">Quora</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Yahoo Answers</a></li>
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='google_scholar.html?q=' + q; window.location.replace(url);">Google Scholar</a></li>
           </ul>
         </div>
       </nav>
