Added adsense to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <title>SearchSavior</title>
         <link rel="shortcut icon" type="image/png" href="icon128.png"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({
+                  google_ad_client: "ca-pub-1710889768420399",
+                  enable_page_level_ads: true
+             });
+        </script>
     </head>
     <body>
       <nav class="nav-extended">
