Updated UI for chrome extension popup

--- a/SearchSavior Chrome Extension/popup.html
+++ b/SearchSavior Chrome Extension/popup.html
@@ -16,10 +16,15 @@
         </style>
     </head>
   <body>
-      <input id="searchbar" placeholder="Search for anything you want">
-      <a href="" target="_blank" id="search">SearchSavior
-      <i class="material-icons right">send</i>
-      </button>
+      <div align="center">
+        <img src="icon64.png" onclick="document.location.replace('index.html');">
+        <a class="brand-logo" id="home"><h5><strong>SearchSavior<strong></h5></a>
+      </div>
+      <div align="center">
+        <input id="searchbar" placeholder="Search for anything you want">
+        <a href="" target="_blank" id="search">
+        <i class="material-icons right">send</i>
+        </button>
     <script src="popup.js"></script>
   </body>
 </html>
