Deleted extra search button in yahoo answers

--- a/yahoo_answers.html
+++ b/yahoo_answers.html
@@ -34,11 +34,7 @@
       </div>
       <div align="center">
         <input id="searchbar" style="max-width: 600;" placeholder="Search for anything you want">
-            <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='wikipedia.html?q=' + q; window.location.replace(url);">Search
-            <i class="material-icons right">send</i>
-            </button>
-      </div>
-        <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Search
+        <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='quora.html?q=' + q; window.location.replace(url);">Search
         <i class="material-icons right">send</i>
         </button>
       </div>
