Search is focused

--- a/SearchSavior Chrome Extension/popup.html
+++ b/SearchSavior Chrome Extension/popup.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <style type="text/css">
           body {
-            min-width: 300px;
+            min-width: 250px;
           }
         </style>
     </head>
@@ -20,11 +20,10 @@
         <img src="icon64.png" onclick="document.location.replace('index.html');">
         <a class="brand-logo" id="home"><h5><strong>SearchSavior<strong></h5></a>
       </div>
-      <div align="center">
+      <div>
         <input id="searchbar" placeholder="Search for anything you want">
-        <a href="" target="_blank" id="search">
-        <i class="material-icons right">send</i>
-        </button>
+        <a href="" target="_blank" id="search"><i class="material-icons right">send</i></a>
+      </div>
     <script src="popup.js"></script>
   </body>
 </html>
