--- a/khan_academy.html
+++ b/khan_academy.html
@@ -34,7 +34,7 @@
       </div>
       <div align="center">
         <input id="searchbar" style="max-width: 600;" placeholder="Search for anything you want">
-        <button class="btn waves-effect waves-light blue" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Search
+        <button class="btn waves-effect waves-light blue" id="searchbutton" type="submit" name="action" onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Search
         <i class="material-icons right">send</i>
         </button>
       </div>
@@ -44,6 +44,11 @@
         var searchbar = document.getElementById("searchbar");
         searchbar.focus();
         searchbar.value = param.get("q");
+        searchbar.addEventListener("keyup", function(e) {
+          if (e.keyCode == 13) {
+            document.getElementById("searchbutton").click();
+          }
+        });
       </script>
       <script>
         (function() {
