--- a/khan_academy.html
+++ b/khan_academy.html
@@ -52,7 +52,7 @@
       </script>
       <script>
         (function() {
-          var cx = '003287012021853683961:lejy8ejlbz0';
+          var cx = '003287012021853683961:ifi7csfhp1w';
           var gcse = document.createElement('script');
           gcse.type = 'text/javascript';
           gcse.async = true;
