--- a/quora.html
+++ b/quora.html
@@ -20,7 +20,7 @@
             </li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='google.html?q=' + q; window.location.replace(url);">Google</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='youtube.html?q=' + q; window.location.replace(url);">Youtube</a></li>
-<!--             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Khan Academy</a></li> -->
+            <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='khan_academy.html?q=' + q; window.location.replace(url);">Khan Academy</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='wikipedia.html?q=' + q; window.location.replace(url);">Wikipedia</a></li>
             <li class="tab disabled"><a class="active">Quora</a></li>
             <li class="tab"><a onclick="var q = document.getElementById('searchbar').value; var url ='yahoo_answers.html?q=' + q; window.location.replace(url);">Yahoo Answers</a></li>
