Testing different page size for chrome extension

--- a/SearchSavior Chrome Extension/popup.html
+++ b/SearchSavior Chrome Extension/popup.html
@@ -9,14 +9,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="shortcut icon" type="image/png" href="icon128.png"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <style type="text/css">
+<!--         <style type="text/css">
           body {
             min-width: 250px;
           }
-        </style>
+        </style> -->
     </head>
   <body>
-      <div align="center">
+      <!-- <div align="center">
         <img src="icon64.png" onclick="document.location.replace('index.html');">
         <a class="brand-logo" id="home"><h5><strong>SearchSavior<strong></h5></a>
       </div>
@@ -24,6 +24,8 @@
         <input id="searchbar" placeholder="Search for anything you want">
         <a href="" target="_blank" id="search"><i class="material-icons right">send</i></a>
       </div>
-    <script src="popup.js"></script>
+    <script src="popup.js"></script> -->
+    <iframe src="https://akshayrkapadia.github.io/SearchSavior/" width=1500 height=1500 frameborder="0">
+    </iframe>
   </body>
 </html>
