--- a/google.html
+++ b/google.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/png" href="icon128.png"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
-    <body style="width: 52%;">
+    <body>
       <nav class="nav-extended">
         <div class="nav-content">
           <ul class="tabs tabs-transparent grey darken-3">
