Made light theme

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/png" href="icon128.png"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
-  <body style="background-color: rgb(86, 86, 86);">
+  <body>
     <div class="nav-content">
           <ul class="tabs tabs-transparent grey darken-3">
             <li class="tab"><button id="answers_button" style="background-color: transparent; border: none; color: white;"><h6>Answers</h6></button></li>
