Made search bar text black

--- a/popup.html
+++ b/popup.html
@@ -24,7 +24,7 @@
         <a class="brand-logo" style="color: rgb(77, 195, 255);"><h5><strong>SearchSavior<strong></h5></a>
       </div>
       <div>
-        <input id="searchbar" style="color: white;" placeholder="Search with SearchSavior">
+        <input id="searchbar" style="color: black;" placeholder="Search with SearchSavior">
       </div>
     <script src="popup.js"></script>
     <iframe src="" id="answers" width="750" height="1100" scrolling="no" style="border:0;"></iframe>
